[package]
name = "jack-audio-mixer"
version = "0.1.0"
authors = ["Tim Freund <tim@freunds.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.4.2"
jack = "0.6"
rosc = "0.3.0"
